resolved the issues of z-index in header and added queries for searching books no matter how user input text with captial letter or not and added queries for a queue

--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -3,7 +3,7 @@
 	background-color: var(--main-white);
 	width: 100%;
 	position: fixed;
-	z-index: 1;
+	z-index: 9;
 	box-shadow: 0px 10px 20px rgba(0,0,0,0.2);
 }
 #header .center {
@@ -102,6 +102,7 @@
 	height: 200px;
 	padding: 16px;
   background-color: var(--main-white);
+/*   background-color: red; */
 }
 #header .center .bottom .mainMenu > li > .subMenu > li {
 	padding: 0;
@@ -124,6 +125,7 @@
 	font-weight: normal;
 	height: 32px;
 	line-height: 32px;
+	position: relative;
 }
 #header .center .bottom .search {
 	padding: 8px;
